[package]
name = "example"
version = "0.1.0"
authors = ["Ben Little <ben.little@benlittle.dev>"]
edition = "2018"

[dependencies]
log = "0.4"
futures-util = { version = "0.3", default-features = false, features = ["async-await", "sink", "std"] }
pin-project = "1.0"
tokio = { version = "1.1.0", features = ["full"] }
tokio-tungstenite = "0.12.0"
async-tungstenite = "0.12.0"

[dev-dependencies]
env_logger = "0.7"
